--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
 	<script>
 		$(document).ready(function() {
-			var socket = io.connect('http://localhost:8000', {path: '/socket.io'});
+			var socket = io.connect('https://ghylrock-whatsapp.herokuapp.com/:53154', {path: '/socket.io'});
 
 			socket.on('message', function(msg) {
 				$('.logs').text(msg);
